# gnutemplate

./: .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac  hello.h  libhello.pc.in  main.c
